<resources>
    <string name="app_name">LapTimer</string>
    <string name="apptitle">LongLapp</string>
    <string name="StartStop">Start</string>
    <string name="LapReset">Reset</string>
    <string name="seconds">00</string>
    <string name="centiSeconds">000</string>
    <string name="minutes">00</string>
    <string name="decimal">.</string>
    <string name="semicolon">:</string>
    <string name="lapNumber">Lap</string>
    <string name="LapTime">LapTime</string>
    <string name="lapText">Lap Number:</string>
    <string name="timeText">Time:</string>
    <string name="differenceText">Difference:</string>
    <string name="differenceLapTime">LapDiff</string>
</resources>