<?xml version="1.0" encoding="UTF-8"?>

<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:backgroundTint="#F7C290"
    app:cardElevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/lapText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/lapText" />

        <TextView
            android:id="@+id/lapNumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lapNumber"
            android:paddingEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/lapText" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="@string/timeText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/lapNumTextView" />

        <TextView
            android:id="@+id/lapTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LapTime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/timeText" />

        <TextView
            android:id="@+id/differenceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="@string/differenceText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/differenceLapTime" />

        <TextView
            android:id="@+id/differenceLapTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/differenceLapTime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>